--- a/packages/ai-chat/src/chat/components-legacy/panels/CustomPanel.scss
+++ b/packages/ai-chat/src/chat/components-legacy/panels/CustomPanel.scss
@@ -7,12 +7,21 @@
 
 @use "@carbon/layout";
 @use "@carbon/styles/scss/theme";
+@use "../../styles/chat-theme";
 
 .cds-aichat--custom-panel {
   display: flex;
   flex-direction: column;
   block-size: 100%;
   inline-size: 100%;
+}
+
+.cds-aichat--widget--max-width {
+  .cds-aichat--overlay-panel-container {
+    .cds-aichat--panel-content {
+      max-inline-size: chat-theme.$max-width;
+    }
+  }
 }
 
 .cds-aichat--custom-panel__content-container {
